--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
         </div>
         <div class="hidden-md hello">
           <ul class="sub-nav-right">
-            <li><a class="secondary-nav-link" href="/link1.html">Day-Of Resources</a></li>
-            <li><a class="secondary-nav-link" href="/link2">Workshops</a></li>
-            <li><a class="secondary-nav-link" href="/link3">Activities</a></li>
+            <li><a class="secondary-nav-link" href="./link1.html">Day-Of Resources</a></li>
+            <li><a class="secondary-nav-link" href="">Workshops</a></li>
+            <li><a class="secondary-nav-link" href="">Activities</a></li>
             <li><a class="secondary-nav-link" href="">APIs & Freebies</a></li>
             <li><a class="secondary-nav-link" href="">Sponsors</a></li>
             <li><a class="secondary-nav-link" href="">Help</a></li>
@@ -271,8 +271,8 @@
           <div class="current-active"></div>
           <ul class="sub-nav-right mobile">
             <li><a class="secondary-nav-link" href="/link1.html">Day-Of Resources</a></li>
-            <li><a class="secondary-nav-link" href="/link2">Workshops</a></li>
-            <li><a class="secondary-nav-link" href="/link3">Activities</a></li>
+            <li><a class="secondary-nav-link" href="">Workshops</a></li>
+            <li><a class="secondary-nav-link" href="">Activities</a></li>
             <li><a class="secondary-nav-link" href="">APIs & Freebies</a></li>
             <li><a class="secondary-nav-link" href="">Sponsors</a></li>
             <li><a class="secondary-nav-link" href="">Help</a></li>
