alphabetize scss  and convert px to rem

--- a/index.html
+++ b/index.html
@@ -157,9 +157,8 @@
             <li><a class="nav-btn nav-item">Sign Up</a></li>
           </div>
           <div class="logged-in-btns">
-            <li class="reveal nav-item">
+            <li class="reveal nav-item username">
               Caroline Z.
-              <div class="down"></div>
               <div class="dropdown-wrapper">
                 <ul>
                   <li class="dropdown-item">
@@ -189,6 +188,7 @@
                 </ul>
               </div>
             </li>
+            <div class="down"></div>
             <img class="account-circle" src="https://randomuser.me/api/portraits/thumb/women/65.jpg"/>
           </div>
         </ul>
@@ -221,7 +221,7 @@
           <li><a class="login">Log In</a></li>
         </ul>
         <div class="logged-in-btns">
-          <ul class="hi">
+          <ul class="user-links-wrapper">
             <li class="dropdown-item">
               <a href="https://careerlab.mlh.io">
                 <img class="nav-item-icon account-circle" src="https://randomuser.me/api/portraits/thumb/women/65.jpg" class="nav-icon"/>
@@ -281,23 +281,7 @@
       </div>
     </nav>
     <div class="content below-menu">
-      <br />
-      <h1 class="text-center">Heading 1</h1>
-      <h2 class="text-center">Heading 2</h2>
-      <h3 class="text-center">Heading 3</h3>
-      <h4 class="text-center">Heading 4</h4>
-      <h1 class="text-center">Heading 1</h1>
-      <h2 class="text-center">Heading 2</h2>
-      <h3 class="text-center">Heading 3</h3>
-      <h4 class="text-center">Heading 4</h4>
-      <h1 class="text-center">Heading 1</h1>
-      <h2 class="text-center">Heading 2</h2>
-      <h3 class="text-center">Heading 3</h3>
-      <h4 class="text-center">Heading 4</h4>
-      <h1 class="text-center">Heading 1</h1>
-      <h2 class="text-center">Heading 2</h2>
-      <h3 class="text-center">Heading 3</h3>
-      <h4 class="text-center">Heading 4</h4>
+      
     </div>
 
     <footer class="site-footer">
