--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         </div>
       </div>
     </nav>    <div class="demo-hero below-menu">
-      <img class="hero-logo" src="img/logos/localhost-logo.png">
+      <img class="hero-logo" src="img/logos/localhost-logo.png"/>
       <h1 class="my-title">MLH Local Hack day</h1>
       <div class="content">
         <p class="hero-info">While these events don't have all the same resources a Member</p>
